# kstocks

./: .gitignore  README.md  package.json  pnpm-lock.yaml
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: db.rs  index_chart.rs  index_tracker.rs  indices_streamer.rs  lib.rs  main.rs  nse.rs  option_streamer.rs  settings.rs
src/components/: IndexChart.tsx
src/types/: settings.ts
