[package]
name = "kstocks"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "kstocks_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6.0.0"
tokio = { version = "1.52.3", features = ["full"] }
tokio-tungstenite = { version = "0.29.0", features = ["native-tls"] }
anyhow = "1.0.103"
sqlx = { version = "0.9.0", features = ["sqlite", "runtime-tokio", "macros"] }
futures = "0.3.32"
chrono = "0.4.45"
lazy_static = "1.5.0"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"

reqwest = { version = "0.12", features = ["json"] }
